--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@
   -moz-text-fill-color: transparent;
 }
 
+body{
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .white-shadow{
   box-shadow: 5px 6px 0px white;
   border: 3px solid #0D1117;
